--- a/src/style/App.css
+++ b/src/style/App.css
@@ -147,6 +147,10 @@
   cursor: pointer;
 }
 
+.button:hover {
+  background-color: #a8c8ff;
+}
+
 .complete-button {
   border: 2px solid #216acd;
 }
